--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -1731,6 +1731,114 @@ textarea.success {
   -webkit-font-smoothing: antialiased;
 }
 
+.cf-icon__lg {
+  font-size: 1.33333333em;
+  line-height: .75em;
+  vertical-align: -15%;
+}
+
+.cf-icon__2x {
+  font-size: 2em;
+}
+
+.cf-icon__3x {
+  font-size: 3em;
+}
+
+.cf-icon__4x {
+  font-size: 4em;
+}
+
+.cf-icon__5x {
+  font-size: 5em;
+}
+
+.cf-icon__border {
+  padding: .2em .25em .15em;
+  border: solid .08em #eee;
+  border-radius: .1em;
+}
+
+.cf-icon__rotate-90 {
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.cf-icon__rotate-180 {
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.cf-icon__rotate-270 {
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+}
+
+.cf-icon__flip-horizontal {
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);
+  -webkit-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
+  transform: scale(-1, 1);
+}
+
+.cf-icon__flip-vertical {
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1);
+  -webkit-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
+  transform: scale(1, -1);
+}
+
+:root .cf-icon__rotate-90,
+:root .cf-icon__rotate-180,
+:root .cf-icon__rotate-270,
+:root .cf-icon__flip-horizontal,
+:root .cf-icon__flip-vertical {
+  -webkit-filter: none;
+  filter: none;
+}
+
+.cf-icon__spin {
+  -webkit-animation: cf-spin 2s infinite linear;
+  animation: cf-spin 2s infinite linear;
+}
+
+.cf-icon__pulse {
+  -webkit-animation: cf-spin 1s infinite steps(8);
+  animation: cf-spin 1s infinite steps(8);
+}
+
+@-webkit-keyframes cf-spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes cf-spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+
 .cf-icon-left:before {
   content: "\e000";
 }
@@ -7358,6 +7466,57 @@ a.focus .summary_event-date {
   margin-right: 0;
   zoom: 1;
   behavior: url('/static/js/boxsizing.htc');
+}
+
+.expandable__filters {
+  border: 1px solid #babbbd;
+  margin: 2.8125em 0 1.875em 0;
+}
+
+.expandable__filters.expandable__padded,
+.expandable__filters .expandable_content {
+  background: #f8f8f8;
+}
+
+.expandable__filters .expandable_header {
+  padding: .625em 1.875em;
+}
+
+.expandable__filters .expandable_header-left {
+  width: auto;
+  margin-top: 0;
+  float: left;
+}
+
+.expandable__filters .expandable_header-right {
+  width: auto;
+  margin-top: 0;
+  float: right;
+}
+
+.expandable__filters .expandable_content {
+  margin: 0 1.875em 1.875em;
+}
+
+.expandable__filters .chosen-select {
+  width: 100%;
+}
+
+.expandable__filters .lt-ie9 .date_label {
+  display: inline-block;
+}
+
+.lt-ie8 .expandable__filters .lt-ie9 .date_label {
+  display: inline;
+}
+
+.expandable__filters .date_label {
+  display: none;
+}
+
+.filtered-by .cf-notification {
+  display: block;
+  margin: 1.875em 0 3.75em;
 }
 
 .post_heading {
